--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "firebase-token-generator": "^2.0.0",
     "grunt": "0.4.5",
     "grunt-cli": "0.1.13",
+    "http": "0.0.0",
     "mongoose": "^4.0.4",
     "nodemon": "^1.3.7",
     "q": "^1.4.1",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "request": "^2.57.0",
+    "socket.io": "^1.3.5",
     "supertest": "^1.0.1"
   },
   "devDependencies": {
